optimize test preview

--- a/test/preview/article3.html
+++ b/test/preview/article3.html
@@ -1,4 +1,4 @@
-<html><body><h1>为脏数据消毒</h1>
+<html><head><link rel="stylesheet" type="text/css" href='./style.css' /></head><body><h1>为脏数据消毒</h1>
 <h6>不应该在组件渲染代码中为数据的正确性进行复杂判断，既：注入组件的数据必须为正确的。</h6>
 <p>对于稍大一些的项目，往往是多人合作开发。在前端和后端交互过程中，数据是否与预期相同是极为重要的。因为前端需要将数据展示到界面上供用户观看，例如我们获取了一个商品列表，我们会循环将列表的内容渲染为界面元素，但是如果商品列表为空时，接口返回的是null而不是空列表，我们的渲染代码就会直接挂掉。这时候前端就不得不多一个判断。但是当数据嵌套多层，有许多数据都需要判断的时候，前端就成了一坨shit。
 
