--- a/test/preview/article4.html
+++ b/test/preview/article4.html
@@ -1,4 +1,4 @@
-<html><body><ul><li class="ul"><p>use with extraElement
+<html><head><link rel="stylesheet" type="text/css" href='./style.css' /></head><body><ul><li class="ul"><p>use with extraElement
 
 </p>
 <pre><code class="js">import React from &#39;react&#39;;</code>
