--- a/test/preview/article2.html
+++ b/test/preview/article2.html
@@ -1,4 +1,4 @@
-<html><body><h1>Vue-Koa 同构开发环境</h1>
+<html><head><link rel="stylesheet" type="text/css" href='./style.css' /></head><body><h1>Vue-Koa 同构开发环境</h1>
 <p>虽然 Vue 已经提供了近乎完美的工程化工具 vue-cli，但是对于一些人来说，自行搭建一个灵活的开发环境也是一个不错的选择。这篇文章将介绍我是如何使用Vue、Koa、PM2等常用框架搭建一个更适合我个人开发的工程环境。
 
 </p>
